Fix bug can't start game  in Chrome

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/ITCGame.loader.js";
       var config = {
-        dataUrl: buildUrl + "/ITCGame.data.br",
-        frameworkUrl: buildUrl + "/ITCGame.framework.js.br",
-        codeUrl: buildUrl + "/ITCGame.wasm.br",
+        dataUrl: buildUrl + "/ITCGame.data",
+        frameworkUrl: buildUrl + "/ITCGame.framework.js",
+        codeUrl: buildUrl + "/ITCGame.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "itcinterviewgame",
