update new requiment

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>itcinterviewgame</title>
+    <title>interviewgame</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
-  <body class="light">
+  <body class="dark">
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas"></canvas>
     </div>
@@ -23,16 +23,16 @@
     </div>
     <div id="unity-fullscreen-button" style="display: none;"></div>
     <script>
-      const hideFullScreenButton = "";
+      const hideFullScreenButton = "1";
       const buildUrl = "Build";
-      const loaderUrl = buildUrl + "/ITCGame.loader.js";
+      const loaderUrl = buildUrl + "/ITCINTERVIEWGAME.loader.js";
       const config = {
-        dataUrl: buildUrl + "/ITCGame.data",
-        frameworkUrl: buildUrl + "/ITCGame.framework.js",
-        codeUrl: buildUrl + "/ITCGame.wasm",
+        dataUrl: buildUrl + "/ITCINTERVIEWGAME.data",
+        frameworkUrl: buildUrl + "/ITCINTERVIEWGAME.framework.js",
+        codeUrl: buildUrl + "/ITCINTERVIEWGAME.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
-        productName: "itcinterviewgame",
+        companyName: "ITCGroup",
+        productName: "interviewgame",
         productVersion: "1.0",
       };
 
